--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,13 +1,15 @@
-@import "./_variables.scss";
-@import "bootstrap";
-@import "./_overrides.scss";
-@import "./utilities.scss";
-@import "./loaders.scss";
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Bebas+Neue&family=Oswald&family=Roboto&display=swap');
+@import './_variables.scss';
+@import 'bootstrap';
+@import './_overrides.scss';
+@import './utilities.scss';
+@import './loaders.scss';
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Roboto&display=swap');
 
+* {
+  font-family: 'Roboto', sans-serif;
+}
 
-
-body{
+body {
   overscroll-behavior: none;
 }
 
@@ -39,11 +41,10 @@ select {
   }
 }
 
-form:invalid button[type="submit"] {
+form:invalid button[type='submit'] {
   filter: grayscale(1);
   pointer-events: none;
 }
-
 
 // input[type=text] {
 //   width: 130px;
